--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -13,11 +13,14 @@
   <tr>
     <td><%= project.title %></td>
     <td><%= project.description %></td>
+    <td><%= pluralize(project.votes.length, "vote") %></td>
+    <td><%= button_to '+1', votes_path(project_id: project.id), method: :post %></td>
     <td><%= link_to 'Show', project %></td>
     <td><%= link_to 'Edit', edit_project_path(project) %></td>
     <td><%= link_to 'Destroy', project, confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
+
 </table>
 
 <br />
