Finish layout and routes Hartl Chap 5

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
+<% provide(:title, 'Contact') %>
 <h1>Contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<p>
+  Contact the MN Project to learn more.
+</p>
